PWD support and icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <script src="/static/js/bootstrap.min.js"></script>
+    <meta name="theme-color" content="#212529">
+    <link rel="manifest" href="../static/manifest.json">
+    <link rel="apple-touch-icon" href="/static/icons/192.png">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/icons/icon.ico"/>
     <title>Home</title>
 </head>
 <body>
@@ -50,4 +54,5 @@
     </div>    
 </body>
 <script src="static/js/index.js"></script>
+<script src="static/js/service.js"></script>
 </html>
