--- a/index.html
+++ b/index.html
@@ -16,15 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Notify</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-            </ul>
           </div>
         </div>
       </nav>        <!-- the start of the homepage -->
@@ -48,7 +40,7 @@
                 <span id="noteSpan">
 
                 </span>
-                <button class="btn btn-danger" onclick="remove()">Clear</button>
+                <button class="btn btn-danger" onclick="removeAll()">Clear</button>
             </div>
         </div>
     </div>    
